# upgrader

./: io.github.leolost2605.updater.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-io.github.leolost2605.updater.json/: init
.flatpak-builder/checksums/: x86_64-io.github.leolost2605.updater.json
data/: io.github.leolost2605.updater.appdata.xml.in  io.github.leolost2605.updater.desktop.in  io.github.leolost2605.updater.gschema.xml  io.github.leolost2605.updater.policy.in  meson.build
data/icons/: meson.build
po/: POTFILES
src/: application.vala  main.vala  meson.build  window.vala
src/Apt/: DBus.vala
src/Helper/: meson.build
src/Helper/RevertHelper/: SystemUpgradeRevertHelper.vala  meson.build
src/Helper/UpgradeHelper/: SystemUpgradeHelper.vala  meson.build
